# NeoQCP

./: .gitignore  CLAUDE.md  README.md  meson.build  meson_options.txt
.github/workflows/: tests.yml
docs/architecture/: README.md  adaptive-sampling.md  async-pipeline.md  colormap-resampling.md  gap-detection.md  qrhi-rendering-pipeline.md
docs/plans/: 2026-03-07-qrhi-rendering-backend-design.md  2026-03-07-qrhi-rendering-backend-plan.md  2026-03-12-gpu-plottable-rendering-design.md  2026-03-12-gpu-plottable-rendering-plan.md  2026-03-12-zero-copy-data-source-plan.md  2026-03-13-colormap2-async-resampler-plan.md  2026-03-13-gpu-colormap-rendering-design.md  2026-03-13-gpu-colormap-rendering-plan.md  2026-03-13-multi-graph-plan.md  2026-03-13-paint-buffer-dirty-tracking-plan.md  2026-03-13-theming-support-design.md  2026-03-13-theming-support-plan.md  2026-03-14-async-pipeline-plan.md
docs/specs/: 2026-03-12-zero-copy-data-source-design.md  2026-03-13-colormap2-async-resampler-design.md  2026-03-13-multi-graph-design.md  2026-03-14-async-pipeline-design.md  2026-03-18-overlay-api-design.md
examples/: meson.build
examples/axis-tags/: meson.build
examples/interactions/: meson.build
examples/plots/: meson.build
examples/scrollbar-axis-range-control/: meson.build
examples/text-document-integration/: meson.build
examples/theme-demo/: main.cpp  meson.build
src/: colorgradient.h  core.cpp  core.h  data-locator.cpp  data-locator.h  datacontainer.h  doc-mainpage.dox  doc-performance.dox  global.h  item-creation-state.cpp  item-creation-state.h  layer.cpp  layer.h  layout.cpp  layout.h  lineending.h  overlay.cpp  overlay.h  qcp.h  scatterstyle.h  selection.cpp  selection.h  selectiondecorator-bracket.cpp  selectiondecorator-bracket.h  selectionrect.h  theme.cpp  theme.h  vector2d.cpp  vector2d.h
src/axis/: axis.cpp  axis.h  axisticker-utils.h  axisticker.cpp  axisticker.h  axistickerdatetime.cpp  axistickerdatetime.h  axistickerfixed.cpp  axistickerfixed.h  axistickerlog.cpp  axistickerlog.h  axistickerpi.cpp  axistickerpi.h  axistickertext.cpp  axistickertext.h  axistickertime.cpp  axistickertime.h  labelpainter.cpp  labelpainter.h  range.cpp  range.h
src/datasource/: abstract-datasource-2d.h  abstract-datasource.h  abstract-multi-datasource.h  algorithms-2d.h  algorithms.h  async-pipeline.cpp  async-pipeline.h  graph-resampler.h  histogram-binner.h  pipeline-scheduler.cpp  pipeline-scheduler.h  resample.cpp  resample.h  resampled-multi-datasource.h  row-major-multi-datasource.h  soa-datasource-2d.h  soa-datasource.h  soa-multi-datasource.h
src/items/: item-bracket.cpp  item-bracket.h  item-curve.cpp  item-curve.h  item-ellipse.cpp  item-ellipse.h  item-hspan.cpp  item-hspan.h  item-line.cpp  item-line.h  item-pixmap.cpp  item-pixmap.h  item-rect.cpp  item-rect.h  item-richtext.cpp  item-richtext.h  item-rspan.cpp  item-rspan.h  item-spanbase.cpp  item-spanbase.h  item-straightline.cpp  item-straightline.h  item-text.cpp  item-text.h  item-tracer.cpp  item-tracer.h  item-vspan.cpp  item-vspan.h  item.cpp  item.h
src/layoutelements/: layoutelement-axisrect.cpp  layoutelement-axisrect.h  layoutelement-colorscale.cpp  layoutelement-colorscale.h  layoutelement-legend-group.cpp  layoutelement-legend-group.h  layoutelement-legend.cpp  layoutelement-legend.h  layoutelement-textelement.cpp  layoutelement-textelement.h
src/painting/: colormap-renderer.cpp  colormap-renderer.h  colormap-rhi-layer.cpp  colormap-rhi-layer.h  grid-rhi-layer.cpp  grid-rhi-layer.h  line-extruder.cpp  line-extruder.h  paintbuffer-pixmap.h  paintbuffer-rhi.cpp  paintbuffer-rhi.h  paintbuffer.cpp  paintbuffer.h  painter.cpp  plottable-rhi-layer.cpp  plottable-rhi-layer.h  rhi-utils.h  span-grid-vertex.h  span-rhi-layer.cpp  span-rhi-layer.h  viewport-offset.h
src/plottables/: plottable-bars.cpp  plottable-bars.h  plottable-colormap.cpp  plottable-colormap.h  plottable-colormap2.cpp  plottable-colormap2.h  plottable-curve.cpp  plottable-curve.h  plottable-draw-utils.cpp  plottable-draw-utils.h  plottable-errorbar.cpp  plottable-errorbar.h  plottable-financial.cpp  plottable-financial.h  plottable-graph.cpp  plottable-graph.h  plottable-graph2.cpp  plottable-graph2.h  plottable-histogram2d.cpp  plottable-histogram2d.h  plottable-l1-cache.h  plottable-linestyle.h  plottable-multigraph.cpp  plottable-multigraph.h  plottable-statisticalbox.cpp  plottable-statisticalbox.h  plottable-waterfall.cpp  plottable-waterfall.h  plottable.cpp  plottable.h  plottable1d.h
src/polar/: layoutelement-angularaxis.cpp  layoutelement-angularaxis.h  polargraph.cpp  polargraph.h  polargrid.h  (+2 more)
tests/: meson.build
tests/auto/: autotest.cpp  meson.build
tests/auto/test-busy-indicator/: test-busy-indicator.cpp  test-busy-indicator.h
tests/auto/test-creation-mode/: test-creation-mode.cpp  test-creation-mode.h
tests/auto/test-data-locator/: test-data-locator.cpp  test-data-locator.h
tests/auto/test-datasource/: test-datasource.cpp  test-datasource.h
tests/auto/test-datasource2d/: test-datasource2d.cpp  test-datasource2d.h
tests/auto/test-grid-rhi/: test-grid-rhi.cpp  test-grid-rhi.h
tests/auto/test-hspan/: test-hspan.cpp  test-hspan.h
tests/auto/test-line-extruder/: test-line-extruder.cpp  test-line-extruder.h
tests/auto/test-multi-datasource/: test-multi-datasource.cpp  test-multi-datasource.h
tests/auto/test-multigraph/: test-multigraph.cpp  test-multigraph.h
tests/auto/test-overlay/: test-overlay.cpp  test-overlay.h
tests/auto/test-paintbuffer/: test-paintbuffer.cpp  test-paintbuffer.h
tests/auto/test-pipeline/: test-gpu-translation.cpp  test-layer-translation.cpp  test-pipeline.cpp  test-pipeline.h  test-viewport-offset.cpp
tests/auto/test-qcustomplot/: test-qcustomplot.cpp  test-qcustomplot.h
tests/auto/test-richtext/: test-richtext.cpp  test-richtext.h
tests/auto/test-rspan/: test-rspan.cpp  test-rspan.h
tests/auto/test-theme/: test-theme.cpp  test-theme.h
tests/auto/test-vspan/: test-vspan.cpp  test-vspan.h
tests/auto/test-waterfall/: test-waterfall.cpp  test-waterfall.h
(+36 files in other folders)
