
test_srcs = [
    'autotest.cpp',
    'test-qcustomplot/test-qcustomplot.cpp',
    'test-qcpgraph/test-qcpgraph.cpp',
    'test-qcpcurve/test-qcpcurve.cpp',
    'test-qcpbars/test-qcpbars.cpp',
    'test-qcpfinancial/test-qcpfinancial.cpp',
    'test-qcplayout/test-qcplayout.cpp',
    'test-qcpaxisrect/test-qcpaxisrect.cpp',
    'test-colormap/test-colormap.cpp',
    'test-datacontainer/test-datacontainer.cpp',
    'test-qcplegend/test-qcplegend.cpp',
    'test-line-extruder/test-line-extruder.cpp',
    'test-datasource/test-datasource.cpp',
    'test-datasource2d/test-datasource2d.cpp',
    'test-theme/test-theme.cpp',
    'test-paintbuffer/test-paintbuffer.cpp',
    'test-multi-datasource/test-multi-datasource.cpp',
    'test-multigraph/test-multigraph.cpp',
    'test-pipeline/test-pipeline.cpp',
    'test-waterfall/test-waterfall.cpp',
    'test-hspan/test-hspan.cpp',
    'test-rspan/test-rspan.cpp',
    'test-vspan/test-vspan.cpp',
    'test-richtext/test-richtext.cpp',
    'test-data-locator/test-data-locator.cpp',
]

test_headers = [
    'test-qcustomplot/test-qcustomplot.h',
    'test-qcpgraph/test-qcpgraph.h',
    'test-qcpcurve/test-qcpcurve.h',
    'test-qcpbars/test-qcpbars.h',
    'test-qcpfinancial/test-qcpfinancial.h',
    'test-qcplayout/test-qcplayout.h',
    'test-qcpaxisrect/test-qcpaxisrect.h',
    'test-colormap/test-colormap.h',
    'test-datacontainer/test-datacontainer.h',
    'test-qcplegend/test-qcplegend.h',
    'test-line-extruder/test-line-extruder.h',
    'test-datasource/test-datasource.h',
    'test-datasource2d/test-datasource2d.h',
    'test-theme/test-theme.h',
    'test-paintbuffer/test-paintbuffer.h',
    'test-multi-datasource/test-multi-datasource.h',
    'test-multigraph/test-multigraph.h',
    'test-pipeline/test-pipeline.h',
    'test-waterfall/test-waterfall.h',
    'test-hspan/test-hspan.h',
    'test-rspan/test-rspan.h',
    'test-vspan/test-vspan.h',
    'test-richtext/test-richtext.h',
    'test-data-locator/test-data-locator.h',
]
test_moc_files = qtmod.compile_moc(headers : test_headers)

auto_tests=executable('auto-tests',test_srcs, test_moc_files, dependencies:[NeoQCP_dep, qtdeps, qttest])
test('test-auto-tests', auto_tests)
